--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ html, body{
     width: 100%;
     height:  100%;
     font-family: PriceDown;
+    background: #000;
 }
 .Brunson{
     font-family: Brunson;
